--- a/examples/headers.html
+++ b/examples/headers.html
@@ -222,9 +222,9 @@
 </span><span class="boring">    worksheet3.set_view_page_layout();
 </span><span class="boring">    worksheet3.write_string(0, 0, "Some text")?;
 </span><span class="boring">
-</span><span class="boring">    let mut image = Image::new("examples/rust_logo.png")?;
-</span><span class="boring">    image.set_scale_height(0.5);
-</span><span class="boring">    image.set_scale_width(0.5);
+</span><span class="boring">    let image = Image::new("examples/rust_logo.png")?
+</span><span class="boring">        .set_scale_height(0.5)
+</span><span class="boring">        .set_scale_width(0.5);
 </span><span class="boring">
 </span><span class="boring">    worksheet3.set_header("&amp;L&amp;[Picture]");
 </span><span class="boring">    worksheet3.set_header_image(&amp;image, HeaderImagePosition::Left)?;
@@ -311,9 +311,9 @@
 </span><span class="boring">    worksheet3.set_view_page_layout();
 </span><span class="boring">    worksheet3.write_string(0, 0, "Some text")?;
 </span><span class="boring">
-</span><span class="boring">    let mut image = Image::new("examples/rust_logo.png")?;
-</span><span class="boring">    image.set_scale_height(0.5);
-</span><span class="boring">    image.set_scale_width(0.5);
+</span><span class="boring">    let image = Image::new("examples/rust_logo.png")?
+</span><span class="boring">        .set_scale_height(0.5)
+</span><span class="boring">        .set_scale_width(0.5);
 </span><span class="boring">
 </span><span class="boring">    worksheet3.set_header("&amp;L&amp;[Picture]");
 </span><span class="boring">    worksheet3.set_header_image(&amp;image, HeaderImagePosition::Left)?;
@@ -400,9 +400,9 @@
 </span><span class="boring">    worksheet3.set_view_page_layout();
 </span><span class="boring">    worksheet3.write_string(0, 0, "Some text")?;
 </span><span class="boring">
-</span><span class="boring">    let mut image = Image::new("examples/rust_logo.png")?;
-</span><span class="boring">    image.set_scale_height(0.5);
-</span><span class="boring">    image.set_scale_width(0.5);
+</span><span class="boring">    let image = Image::new("examples/rust_logo.png")?
+</span><span class="boring">        .set_scale_height(0.5)
+</span><span class="boring">        .set_scale_width(0.5);
 </span><span class="boring">
 </span>    worksheet3.set_header("&amp;L&amp;[Picture]");
     worksheet3.set_header_image(&amp;image, HeaderImagePosition::Left)?;
@@ -489,9 +489,9 @@
 </span><span class="boring">    worksheet3.set_view_page_layout();
 </span><span class="boring">    worksheet3.write_string(0, 0, "Some text")?;
 </span><span class="boring">
-</span><span class="boring">    let mut image = Image::new("examples/rust_logo.png")?;
-</span><span class="boring">    image.set_scale_height(0.5);
-</span><span class="boring">    image.set_scale_width(0.5);
+</span><span class="boring">    let image = Image::new("examples/rust_logo.png")?
+</span><span class="boring">        .set_scale_height(0.5)
+</span><span class="boring">        .set_scale_width(0.5);
 </span><span class="boring">
 </span><span class="boring">    worksheet3.set_header("&amp;L&amp;[Picture]");
 </span><span class="boring">    worksheet3.set_header_image(&amp;image, HeaderImagePosition::Left)?;
@@ -578,9 +578,9 @@
 </span><span class="boring">    worksheet3.set_view_page_layout();
 </span><span class="boring">    worksheet3.write_string(0, 0, "Some text")?;
 </span><span class="boring">
-</span><span class="boring">    let mut image = Image::new("examples/rust_logo.png")?;
-</span><span class="boring">    image.set_scale_height(0.5);
-</span><span class="boring">    image.set_scale_width(0.5);
+</span><span class="boring">    let image = Image::new("examples/rust_logo.png")?
+</span><span class="boring">        .set_scale_height(0.5)
+</span><span class="boring">        .set_scale_width(0.5);
 </span><span class="boring">
 </span><span class="boring">    worksheet3.set_header("&amp;L&amp;[Picture]");
 </span><span class="boring">    worksheet3.set_header_image(&amp;image, HeaderImagePosition::Left)?;
@@ -667,9 +667,9 @@
 </span><span class="boring">    worksheet3.set_view_page_layout();
 </span><span class="boring">    worksheet3.write_string(0, 0, "Some text")?;
 </span><span class="boring">
-</span><span class="boring">    let mut image = Image::new("examples/rust_logo.png")?;
-</span><span class="boring">    image.set_scale_height(0.5);
-</span><span class="boring">    image.set_scale_width(0.5);
+</span><span class="boring">    let image = Image::new("examples/rust_logo.png")?
+</span><span class="boring">        .set_scale_height(0.5)
+</span><span class="boring">        .set_scale_width(0.5);
 </span><span class="boring">
 </span><span class="boring">    worksheet3.set_header("&amp;L&amp;[Picture]");
 </span><span class="boring">    worksheet3.set_header_image(&amp;image, HeaderImagePosition::Left)?;
@@ -756,9 +756,9 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     worksheet3.set_view_page_layout();
     worksheet3.write_string(0, 0, "Some text")?;
 
-    let mut image = Image::new("examples/rust_logo.png")?;
-    image.set_scale_height(0.5);
-    image.set_scale_width(0.5);
+    let image = Image::new("examples/rust_logo.png")?
+        .set_scale_height(0.5)
+        .set_scale_width(0.5);
 
     worksheet3.set_header("&amp;L&amp;[Picture]");
     worksheet3.set_header_image(&amp;image, HeaderImagePosition::Left)?;
