--- a/examples/images.html
+++ b/examples/images.html
@@ -209,7 +209,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
     // Insert an image with scaling.
     worksheet.write_string(15, 0, "Insert a scaled image:")?;
-    image.set_scale_width(0.75).set_scale_height(0.75);
+    image = image.set_scale_width(0.75).set_scale_height(0.75);
     worksheet.insert_image(15, 1, &amp;image)?;
 
     // Save the file to disk.
