--- a/examples/data_validation.html
+++ b/examples/data_validation.html
@@ -173,7 +173,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="data-validation-add-cell-validation-and-dropdowns"><a class="header" href="#data-validation-add-cell-validation-and-dropdowns">Data Validation: add cell validation and dropdowns</a></h1>
+                        <h1 id="data-validation-add-cell-validation-and-dropdowns"><a class="header" href="#data-validation-add-cell-validation-and-dropdowns">Data Validation: Add cell validation and dropdowns</a></h1>
 <p>Example of how to add data validation and dropdown lists using the
 <code>rust_xlsxwriter</code> library.</p>
 <p>Data validation is a feature of Excel which allows you to restrict the data that
