--- a/examples/right_to_left.html
+++ b/examples/right_to_left.html
@@ -205,9 +205,9 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     worksheet1.set_column_width(0, 25)?;
 
     // Standard direction:         | A1 | B1 | C1 | ...
-    worksheet1.write_string(0, 0, "نص عربي / English text")?;
-    worksheet1.write_string_with_format(1, 0, "نص عربي / English text", &amp;format_left_to_right)?;
-    worksheet1.write_string_with_format(2, 0, "نص عربي / English text", &amp;format_right_to_left)?;
+    worksheet1.write(0, 0, "نص عربي / English text")?;
+    worksheet1.write_with_format(1, 0, "نص عربي / English text", &amp;format_left_to_right)?;
+    worksheet1.write_with_format(2, 0, "نص عربي / English text", &amp;format_right_to_left)?;
 
     // Add a worksheet and change it to right to left direction.
     let worksheet2 = workbook.add_worksheet();
@@ -217,9 +217,9 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     worksheet2.set_column_width(0, 25)?;
 
     // Right to left direction:    ... | C1 | B1 | A1 |
-    worksheet2.write_string(0, 0, "نص عربي / English text")?;
-    worksheet2.write_string_with_format(1, 0, "نص عربي / English text", &amp;format_left_to_right)?;
-    worksheet2.write_string_with_format(2, 0, "نص عربي / English text", &amp;format_right_to_left)?;
+    worksheet2.write(0, 0, "نص عربي / English text")?;
+    worksheet2.write_with_format(1, 0, "نص عربي / English text", &amp;format_left_to_right)?;
+    worksheet2.write_with_format(2, 0, "نص عربي / English text", &amp;format_right_to_left)?;
 
     workbook.save("right_to_left.xlsx")?;
 
