--- a/changelog.html
+++ b/changelog.html
@@ -175,6 +175,24 @@
                     <main>
                         <h1 id="release-notes"><a class="header" href="#release-notes">Release Notes</a></h1>
 <p>This section show the feature additions, changes and bug fixes in rust_xlsxwriter.</p>
+<h2 id="0750---2024-09-02"><a class="header" href="#0750---2024-09-02">[0.75.0] - 2024-09-02</a></h2>
+<h3 id="removed"><a class="header" href="#removed">Removed</a></h3>
+<ul>
+<li>
+<p>Removed dependency on the <code>regex.rs</code> crate for smaller binary sizes. The only
+non-optional dependency is now <code>zip.rs</code>.</p>
+<p>An example of the size difference is shown below for one of the sample apps:</p>
+<div class="table-wrapper"><table><thead><tr><th><code>app_hello_world</code></th><th>v0.74.0</th><th>v0.74.0</th></tr></thead><tbody>
+<tr><td>Debug</td><td>9.2M</td><td>4.2M</td></tr>
+<tr><td>Release</td><td>3.4M</td><td>1.6M</td></tr>
+</tbody></table>
+</div></li>
+<li>
+<p>Removed the <code>Formula::use_future_functions()</code> and
+<code>Formula::use_table_functions()</code> methods since there functionality is now
+handled automatically as a result of the <code>regex</code> change.</p>
+</li>
+</ul>
 <h2 id="0740---2024-08-24"><a class="header" href="#0740---2024-08-24">[0.74.0] - 2024-08-24</a></h2>
 <h3 id="added"><a class="header" href="#added">Added</a></h3>
 <ul>
@@ -377,7 +395,7 @@ previously <code>pub(crate)</code> private.</p>
 <p><a href="https://github.com/jmcnamara/rust_xlsxwriter/issues/83">Feature Request #83</a>.</p>
 </li>
 </ul>
-<h3 id="removed"><a class="header" href="#removed">Removed</a></h3>
+<h3 id="removed-1"><a class="header" href="#removed-1">Removed</a></h3>
 <ul>
 <li>
 <p>Removed unnecessary lifetime on <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Format.html"><code>Format</code></a> objects used in Worksheet <code>write()</code>
@@ -642,7 +660,7 @@ with large multi-worksheet files.</li>
 <h3 id="added-31"><a class="header" href="#added-31">Added</a></h3>
 <ul>
 <li>Added support for worksheet <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Table.html"><code>Table</code></a> header and cell formatting via the
-<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.TableColumn::html#method.set_format"><code>TableColumn::set_format()</code></a> and <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.TableColumn::html#method.set_header_format"><code>TableColumn::set_header_format()</code></a> methods.</li>
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.TableColumn.html#method.set_format"><code>TableColumn::set_format()</code></a> and <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.TableColumn.html#method.set_header_format"><code>TableColumn::set_header_format()</code></a> methods.</li>
 </ul>
 <h2 id="0420---2023-07-11"><a class="header" href="#0420---2023-07-11">[0.42.0] - 2023-07-11</a></h2>
 <h3 id="changed-3"><a class="header" href="#changed-3">Changed</a></h3>
@@ -1092,7 +1110,7 @@ features such as EMF and WMF formats, removal of duplicate images, hyperlinks
 in images and images in headers/footers.</p>
 </li>
 </ul>
-<h3 id="removed-1"><a class="header" href="#removed-1">Removed</a></h3>
+<h3 id="removed-2"><a class="header" href="#removed-2">Removed</a></h3>
 <ul>
 <li>The <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/workbook/struct.Workbook.html#method.save"><code>Workbook::save()</code></a> method has been extended to handle paths or strings.
 The <code>workbook.save_to_path()</code> method has been removed. See <a href="https://github.com/jmcnamara/rust_xlsxwriter/pull/15">PR #15</a>.</li>
