--- a/performance.html
+++ b/performance.html
@@ -177,70 +177,73 @@
 <p>The <code>rust_xlsxwriter</code> library has sister libraries written in C
 (<a href="https://libxlsxwriter.github.io">libxlsxwriter</a>), Python (<a href="https://xlsxwriter.readthedocs.io/index.html">XlsxWriter</a>) and Perl (<a href="https://metacpan.org/dist/Excel-Writer-XLSX/view/lib/Excel/Writer/XLSX.pm">Excel::Writer::XLSX</a>).</p>
 <p>A <a href="https://lib.rs/crates/hyperfine">hyperfine</a> performance comparison between the C, Rust and Python versions is
-shown below. The Perl performance is similar to the Python library.</p>
-<pre><code>$ hyperfine ./app_perf_test ./c_perf_test "python py_perf_test.py" --warmup 3
-Benchmark 1: ./app_perf_test
-  Time (mean ± σ):     233.6 ms ±   1.6 ms    [User: 216.0 ms, System: 15.7 ms]
-  Range (min … max):   230.7 ms … 235.7 ms    12 runs
-
-Benchmark 2: ./c_perf_test
-  Time (mean ± σ):     197.2 ms ±   2.0 ms    [User: 163.1 ms, System: 28.4 ms]
-  Range (min … max):   194.5 ms … 201.0 ms    14 runs
-
-Benchmark 3: python py_perf_test.py
-  Time (mean ± σ):      1.099 s ±  0.011 s    [User: 1.051 s, System: 0.041 s]
-  Range (min … max):    1.085 s …  1.125 s    10 runs
-
-Summary
-  './c_perf_test' ran
-    1.18 ± 0.01 times faster than './app_perf_test'
-    5.57 ± 0.08 times faster than 'python py_perf_test.py'
-</code></pre>
-<p>Or in other words, the C version is the fastest and if we take that as 1 then
-the rust version is 1.18x (or 18%) slower and the Python version is 5.5x slower.</p>
+shown below. The Perl performance is similar to the Python library so it has been omitted.</p>
 <p>The <code>rust_xlsxwriter</code> library also has an optional compilation "feature" called
 <code>zlib</code> which will allow it (via ZipWriter) to use compression from a native C
 library. This improves the performance on large files significantly and even
 beats the C/libxlsxwriter version:</p>
-<pre><code>$ hyperfine ./app_perf_test ./app_perf_test_zlib ./c_perf_test --warmup 3
-Benchmark 1: ./app_perf_test
-  Time (mean ± σ):     244.3 ms ±  10.5 ms    [User: 221.5 ms, System: 18.1 ms]
-  Range (min … max):   231.8 ms … 259.8 ms    11 runs
+<pre><code>$ hyperfine ./rust_perf_test_with_zlib \
+            ./c_perf_test              \
+            ./rust_perf_test           \
+            "python py_perf_test.py"   \
+            --warmup 3 --sort command
 
-Benchmark 2: ./app_perf_test_zlib
-  Time (mean ± σ):     149.4 ms ±  10.5 ms    [User: 129.5 ms, System: 16.1 ms]
-  Range (min … max):   140.7 ms … 178.5 ms    18 runs
+Benchmark 1: ./rust_perf_test_with_zlib
+  Time (mean ± σ):     152.6 ms ±   3.5 ms    [User: 134.3 ms, System: 16.4 ms]
+  Range (min … max):   147.0 ms … 158.9 ms    17 runs
 
-Benchmark 3: ./c_perf_test
-  Time (mean ± σ):     197.7 ms ±   2.3 ms    [User: 163.4 ms, System: 28.4 ms]
-  Range (min … max):   195.4 ms … 204.5 ms    14 runs
+Benchmark 2: ./c_perf_test
+  Time (mean ± σ):     210.9 ms ±   4.2 ms    [User: 171.9 ms, System: 34.1 ms]
+  Range (min … max):   204.1 ms … 219.2 ms    13 runs
 
-Summary
-  './app_perf_test_zlib' ran
-    1.32 ± 0.09 times faster than './c_perf_test'
-    1.63 ± 0.13 times faster than './app_perf_test'
+Benchmark 3: ./rust_perf_test
+  Time (mean ± σ):     240.8 ms ±   4.5 ms    [User: 222.4 ms, System: 16.6 ms]
+  Range (min … max):   233.8 ms … 250.9 ms    12 runs
+
+Benchmark 4: python py_perf_test.py
+  Time (mean ± σ):     919.1 ms ±  17.0 ms    [User: 870.2 ms, System: 43.4 ms]
+  Range (min … max):   885.6 ms … 938.2 ms    10 runs
+
+Relative speed comparison
+        1.00          ./rust_perf_test_with_zlib
+        1.38 ±  0.04  ./c_perf_test
+        1.58 ±  0.05  ./rust_perf_test
+        6.02 ±  0.18  python py_perf_test.py
+</code></pre>
+<p>This shows that the <code>rust_xlsxwriter</code> with <code>zlib</code> version is the fastest version
+and that it is 1.38 times faster than the C version, 1.58 times faster than the
+standard <code>rust_xlsxwriter</code> version and 6 times faster than the Python version.</p>
+<p>Here is the relative performance of the C, standard <code>rust_xlsxwriter</code> and Python versions:</p>
+<pre><code>$ hyperfine ./c_perf_test             \
+            ./rust_perf_test          \
+            "python py_perf_test.py"  \
+            --warmup 3 --sort command
+...
+
+Relative speed comparison
+        1.00          ./c_perf_test
+        1.14 ±  0.03  ./rust_perf_test
+        4.44 ±  0.13  python py_perf_test.py
+</code></pre>
+<p>And the relative performance of the <code>rust_xlsxwriter</code> and Python versions:</p>
+<pre><code>$ hyperfine ./rust_perf_test "python py_perf_test.py" --warmup 3 --sort command
+
+...
+
+Relative speed comparison
+        1.00          ./rust_perf_test
+        3.88 ±  0.10  python py_perf_test.py
 </code></pre>
 <p>As with any performance test there are a lot of factors that may affect the
 results, however these results are indicative of the relative performance.</p>
 <p>The programs used to generate these results are shown below.</p>
 <h2 id="rust"><a class="header" href="#rust">Rust</a></h2>
-<pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
-</span><span class="boring">//
-</span><span class="boring">// Copyright 2022-2024, John McNamara, jmcnamara@cpan.org
-</span><span class="boring">
-</span><span class="boring">//! Simple performance test for rust_xlsxwriter.
-</span><span class="boring">
-</span><span class="boring">use rust_xlsxwriter::{Workbook, XlsxError};
-</span>use std::env;
+<pre><code class="language-rust">use rust_xlsxwriter::{Workbook, XlsxError};
 
 fn main() -&gt; Result&lt;(), XlsxError&gt; {
-    let args: Vec&lt;String&gt; = env::args().collect();
 
     let col_max = 50;
-    let row_max = match args.get(1) {
-        Some(arg) =&gt; arg.parse::&lt;u32&gt;().unwrap_or(4_000),
-        None =&gt; 4_000,
-    };
+    let row_max = 4_000;
 
     let mut workbook = Workbook::new();
     let worksheet = workbook.add_worksheet();
