--- a/print.html
+++ b/print.html
@@ -25661,6 +25661,14 @@ workbook.close()
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="release-notes"><a class="header" href="#release-notes">Release Notes</a></h1>
 <p>This section show the feature additions, changes and bug fixes in rust_xlsxwriter.</p>
+<h2 id="0794---2024-11-18"><a class="header" href="#0794---2024-11-18">[0.79.4] - 2024-11-18</a></h2>
+<h3 id="fixed"><a class="header" href="#fixed">Fixed</a></h3>
+<ul>
+<li>
+<p>Fixed issue when handling PNG images with 0 DPI but with DPI units set.</p>
+<p><a href="https://github.com/jmcnamara/rust_xlsxwriter/issues/117">Issue #117</a></p>
+</li>
+</ul>
 <h2 id="0793---2024-11-15"><a class="header" href="#0793---2024-11-15">[0.79.3] - 2024-11-15</a></h2>
 <h3 id="added"><a class="header" href="#added">Added</a></h3>
 <ul>
@@ -25671,7 +25679,7 @@ implement the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/tr
 <p><a href="https://github.com/jmcnamara/rust_xlsxwriter/issues/115">Request #115</a></p>
 </li>
 </ul>
-<h3 id="fixed"><a class="header" href="#fixed">Fixed</a></h3>
+<h3 id="fixed-1"><a class="header" href="#fixed-1">Fixed</a></h3>
 <ul>
 <li>
 <p>Fixed maximum cell width when autofitting columns. The maximum width is now
@@ -25691,7 +25699,7 @@ different offset values when using functions like
 </li>
 </ul>
 <h2 id="0791---2024-10-31"><a class="header" href="#0791---2024-10-31">[0.79.1] - 2024-10-31</a></h2>
-<h3 id="fixed-1"><a class="header" href="#fixed-1">Fixed</a></h3>
+<h3 id="fixed-2"><a class="header" href="#fixed-2">Fixed</a></h3>
 <ul>
 <li>
 <p>Fixed issue where the precedence order of conditional formats wasn't being
@@ -25862,7 +25870,7 @@ messages. It also allows you to restrict input to values in a dropdown list.</p>
 <li>Added support for adjusting the layout position of chart elements: plot
 area, legend, title and axis labels. See <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/chart/struct.ChartLayout.html"><code>ChartLayout</code></a>.</li>
 </ul>
-<h3 id="fixed-2"><a class="header" href="#fixed-2">Fixed</a></h3>
+<h3 id="fixed-3"><a class="header" href="#fixed-3">Fixed</a></h3>
 <ul>
 <li>
 <p>Fixed issue where a worksheet name required quoting when used with
@@ -25935,7 +25943,7 @@ versions of Office.</p>
 </li>
 </ul>
 <h2 id="0642---2024-04-13"><a class="header" href="#0642---2024-04-13">[0.64.2] - 2024-04-13</a></h2>
-<h3 id="fixed-3"><a class="header" href="#fixed-3">Fixed</a></h3>
+<h3 id="fixed-4"><a class="header" href="#fixed-4">Fixed</a></h3>
 <ul>
 <li>Fixed internal links in table of contents.</li>
 </ul>
@@ -26147,7 +26155,7 @@ and<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/chart/struct.
 <li>Added support for chart series error bars via the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/chart/struct.ChartErrorBars.html"><code>ChartErrorBars</code></a> struct
 and methods.</li>
 </ul>
-<h3 id="fixed-4"><a class="header" href="#fixed-4">Fixed</a></h3>
+<h3 id="fixed-5"><a class="header" href="#fixed-5">Fixed</a></h3>
 <ul>
 <li>
 <p>Fixed XML error in non-Pie charts.</p>
@@ -26182,7 +26190,7 @@ interface.</p>
 <p>Added support for leader lines to non-Pie charts.</p>
 </li>
 </ul>
-<h3 id="fixed-5"><a class="header" href="#fixed-5">Fixed</a></h3>
+<h3 id="fixed-6"><a class="header" href="#fixed-6">Fixed</a></h3>
 <ul>
 <li>Fixed handling of <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Formula.html#formulas-added-in-excel-2010-and-later">future functions</a> in table formulas.</li>
 </ul>
@@ -26231,7 +26239,7 @@ the <a href="https://crates.io/crates/polars_excel_writer"><code>polars_excel_wr
 </li>
 </ul>
 <h2 id="0450---2023-08-12"><a class="header" href="#0450---2023-08-12">[0.45.0] - 2023-08-12</a></h2>
-<h3 id="fixed-6"><a class="header" href="#fixed-6">Fixed</a></h3>
+<h3 id="fixed-7"><a class="header" href="#fixed-7">Fixed</a></h3>
 <ul>
 <li>
 <p>Fixed "multiply with overflow" issue when image locations in the worksheet
@@ -26393,7 +26401,7 @@ via <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/chart/struct
 <li>Added performance improvement for applications that use a lot of <code>Format</code>
 objects. <a href="https://github.com/jmcnamara/rust_xlsxwriter/issues/30">GitHub Issue #30</a>.</li>
 </ul>
-<h3 id="fixed-7"><a class="header" href="#fixed-7">Fixed</a></h3>
+<h3 id="fixed-8"><a class="header" href="#fixed-8">Fixed</a></h3>
 <ul>
 <li>Fixed issue introduced in v0.34.0 where <code>Rc&lt;&gt;</code> value was blocking <code>Send</code> in
 multithreaded applications. <a href="https://github.com/jmcnamara/rust_xlsxwriter/issues/29">GitHub Issue #29</a>.</li>
@@ -26656,7 +26664,7 @@ For example strings like "This is <strong>bold</strong> and this is <em>italic</
 </li>
 </ul>
 <h2 id="0171---2022-12-18"><a class="header" href="#0171---2022-12-18">[0.17.1] - 2022-12-18</a></h2>
-<h3 id="fixed-8"><a class="header" href="#fixed-8">Fixed</a></h3>
+<h3 id="fixed-9"><a class="header" href="#fixed-9">Fixed</a></h3>
 <ul>
 <li>Fixes issue where header image files became corrupt during incremental saves.
 Also fixes similar issues in some formatting code.</li>
@@ -26895,7 +26903,7 @@ Footers</a>.</p>
 </ul>
 <p>See also the <code>rust_xlsxwriter</code> user documentation on <a href="https://rustxlsxwriter.github.io/formulas/dynamic_arrays.html">Dynamic Array support</a>.</p>
 <h2 id="031---2022-10-01"><a class="header" href="#031---2022-10-01">[0.3.1] - 2022-10-01</a></h2>
-<h3 id="fixed-9"><a class="header" href="#fixed-9">Fixed</a></h3>
+<h3 id="fixed-10"><a class="header" href="#fixed-10">Fixed</a></h3>
 <ul>
 <li>Fixed minor crate issue.</li>
 </ul>
@@ -26906,7 +26914,7 @@ Footers</a>.</p>
 values.</li>
 </ul>
 <h2 id="021---2022-09-22"><a class="header" href="#021---2022-09-22">[0.2.1] - 2022-09-22</a></h2>
-<h3 id="fixed-10"><a class="header" href="#fixed-10">Fixed</a></h3>
+<h3 id="fixed-11"><a class="header" href="#fixed-11">Fixed</a></h3>
 <ul>
 <li>Fixed some minor crate/publishing issues.</li>
 </ul>
