--- a/format/defaults.html
+++ b/format/defaults.html
@@ -197,8 +197,8 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     let format = Format::default();
 
     // These methods calls are equivalent.
-    worksheet.write_string(0, 0, "Hello")?;
-    worksheet.write_string_with_format(1, 0, "Hello", &amp;format)?;
+    worksheet.write(0, 0, "Hello")?;
+    worksheet.write_with_format(1, 0, "Hello", &amp;format)?;
 
     workbook.save("formats.xlsx")?;
 
