--- a/format/categories.html
+++ b/format/categories.html
@@ -197,7 +197,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // Add a format.
     let currency_format = Format::new().set_num_format("$#,##0.00");
 
-    worksheet.write_number_with_format(0, 0, 1234.56, &amp;currency_format)?;
+    worksheet.write_with_format(0, 0, 1234.56, &amp;currency_format)?;
 
     workbook.save("currency_format.xlsx")?;
 
@@ -251,7 +251,7 @@ example and rerun it we will get a number format in the Currency category:</p>
 </span><span class="boring">    // Add a format.
 </span>    let currency_format = Format::new().set_num_format("[$$-409]#,##0.00");
 
-    worksheet.write_number_with_format(0, 0, 1234.56, &amp;currency_format)?;
+    worksheet.write_with_format(0, 0, 1234.56, &amp;currency_format)?;
 <span class="boring">
 </span><span class="boring">    workbook.save("currency_format.xlsx")?;
 </span><span class="boring">
