--- a/format/intro.html
+++ b/format/intro.html
@@ -200,34 +200,34 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
     // Create some sample formats to display
     let format1 = Format::new().set_font_name("Arial");
-    worksheet.write_string_with_format(0, 0, "Fonts", &amp;format1)?;
+    worksheet.write_with_format(0, 0, "Fonts", &amp;format1)?;
 
     let format2 = Format::new().set_font_name("Algerian").set_font_size(14);
-    worksheet.write_string_with_format(1, 0, "Fonts", &amp;format2)?;
+    worksheet.write_with_format(1, 0, "Fonts", &amp;format2)?;
 
     let format3 = Format::new().set_font_name("Comic Sans MS");
-    worksheet.write_string_with_format(2, 0, "Fonts", &amp;format3)?;
+    worksheet.write_with_format(2, 0, "Fonts", &amp;format3)?;
 
     let format4 = Format::new().set_font_name("Edwardian Script ITC");
-    worksheet.write_string_with_format(3, 0, "Fonts", &amp;format4)?;
+    worksheet.write_with_format(3, 0, "Fonts", &amp;format4)?;
 
     let format5 = Format::new().set_font_color(Color::Red);
-    worksheet.write_string_with_format(4, 0, "Font color", &amp;format5)?;
+    worksheet.write_with_format(4, 0, "Font color", &amp;format5)?;
 
     let format6 = Format::new().set_background_color(Color::RGB(0xDAA520));
-    worksheet.write_string_with_format(5, 0, "Fills", &amp;format6)?;
+    worksheet.write_with_format(5, 0, "Fills", &amp;format6)?;
 
     let format7 = Format::new().set_border(FormatBorder::Thin);
-    worksheet.write_string_with_format(6, 0, "Borders", &amp;format7)?;
+    worksheet.write_with_format(6, 0, "Borders", &amp;format7)?;
 
     let format8 = Format::new().set_bold();
-    worksheet.write_string_with_format(7, 0, "Bold", &amp;format8)?;
+    worksheet.write_with_format(7, 0, "Bold", &amp;format8)?;
 
     let format9 = Format::new().set_italic();
-    worksheet.write_string_with_format(8, 0, "Italic", &amp;format9)?;
+    worksheet.write_with_format(8, 0, "Italic", &amp;format9)?;
 
     let format10 = Format::new().set_bold().set_italic();
-    worksheet.write_string_with_format(9, 0, "Bold and Italic", &amp;format10)?;
+    worksheet.write_with_format(9, 0, "Bold and Italic", &amp;format10)?;
 
     workbook.save("formats.xlsx")?;
 
