--- a/examples/doc_properties.html
+++ b/examples/doc_properties.html
@@ -199,7 +199,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
         .set_company("Rust Solutions Inc")
         .set_category("Sample spreadsheets")
         .set_keywords("Sample, Example, Properties")
-        .set_comment("Created with Rust and `rust_xlsxwriter`");
+        .set_comment("Created with Rust and rust_xlsxwriter");
 
     workbook.set_properties(&amp;properties);
 
