--- a/examples/sparklines1.html
+++ b/examples/sparklines1.html
@@ -212,7 +212,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
     worksheet.add_sparkline(0, 5, &amp;sparkline1)?;
 
-    // Add a column sparkline with non-default style.
+    // Add a column sparkline with a non-default style.
     let sparkline2 = Sparkline::new()
         .set_range(("Sheet1", 1, 0, 1, 4))
         .set_type(SparklineType::Column)
