--- a/examples/macros.html
+++ b/examples/macros.html
@@ -207,7 +207,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     worksheet.insert_button(2, 1, &amp;button)?;
 
     // Save the file to disk. Note the `.xlsm` extension. This is required by
-    // Excel or it raise a warning.
+    // Excel or it will raise a warning.
     workbook.save("macros.xlsm")?;
 
     Ok(())
